--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -1,22 +1,19 @@
+
 {
   "_meta": { "lang": "fr", "name": "Français" },
-
   "site.name": "JirehFaith",
   "nav.home": "Accueil",
   "nav.about": "À propos",
   "nav.donate": "Donner",
   "nav.techInfo": "Infos Techniques",
-
   "hero.title": "JIREH FAITH",
   "hero.tagline": "Quand la vie parle, que la Parole de Dieu réponde.",
-
   "composer.placeholder": "Décrivez votre situation ou sélectionnez une circonstance…",
   "composer.compose": "Composer une Prière",
   "composer.clear": "Effacer",
   "composer.copy": "Copier",
   "composer.copied": "Copié !",
   "composer.generatedIn": "Généré en : {{lang}}",
-
   "donate.title": "Soutenez JirehFaith",
   "donate.lead": "Choisissez un fournisseur ci-dessous pour faire un don. Merci de soutenir ce ministère.",
   "donate.stripe": "Donner avec Stripe",
@@ -25,7 +22,6 @@
   "donate.googlepay": "Donner avec Google Pay",
   "donate.comingSoon": "(bientôt disponible)",
   "donate.note": "Si un bouton est désactivé, ce moyen n’est pas encore disponible.",
-
   "about.title": "À propos de JirehFaith",
   "about.p1": "Chez Jireh Faith, nous croyons que lorsque la vie parle — dans la joie, la tristesse, la peur ou la gratitude — la réponse la plus puissante vient de la Parole de Dieu.",
   "about.p2": "Ancré dans la promesse de Jéhovah Jireh — « L’Éternel pourvoira » (Genèse 22:14) — JirehFaith est un compagnon de prière conçu pour apporter l’Écriture dans vos circonstances quotidiennes.",
@@ -47,13 +43,18 @@
   "about.blessing": "Que les bénédictions de Dieu soient toujours sur vous !",
   "about.cta.tech": "Infos Techniques",
   "about.cta.donate": "Donner",
-
   "tech.h": "Infos Techniques",
   "tech.p": "Détails sur la technologie qui propulse JirehFaith.",
-
   "lang.selector.label": "Langue",
   "lang.en": "Anglais",
   "lang.es": "Espagnol",
   "lang.fr": "Français",
-  "lang.pt": "Portugais"
+  "lang.pt": "Portugais",
+  "page.title": "Compositeur de prières avec les Saintes Écritures",
+  "input.emotion": "Émotion",
+  "output.prayer": "Prière",
+  "output.noPrayerYet": "Pas encore de prière.",
+  "a11y.compose": "Composer une prière",
+  "a11y.copy": "Copier la prière complète",
+  "a11y.clear": "Effacer le contenu de la prière"
 }
