Mission 3: Localize Scripture subheading (output.scripture)

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -53,6 +53,7 @@
   "input.emotion": "Emotion",
   "output.prayer": "Prayer",
   "output.noPrayerYet": "No prayer yet.",
+  "output.scripture": "Scripture",
   "a11y.compose": "Compose prayer",
   "a11y.copy": "Copy full prayer",
   "a11y.clear": "Clear prayer output"
