Mission 3: Localize emotion labels across EN/ES/FR/PT

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -51,6 +51,21 @@
   "lang.pt": "Portuguese",
   "page.title": "Prayer Composer with The Holy Bible Scriptures",
   "input.emotion": "Emotion",
+  "emotion.anxiety": "Anxiety",
+  "emotion.grief": "Grief",
+  "emotion.fear": "Fear",
+  "emotion.anger": "Anger",
+  "emotion.love": "Love",
+  "emotion.perseverance": "Perseverance",
+  "emotion.hope": "Hope",
+  "emotion.joy": "Joy",
+  "emotion.financial_trials": "Financial trials",
+  "emotion.relationship_trials": "Relationship trials",
+  "emotion.illness": "Illness",
+  "emotion.despair": "Despair",
+  "emotion.peace": "Peace",
+  "emotion.success": "Success",
+  "emotion.protection": "Protection",
   "output.prayer": "Prayer",
   "output.noPrayerYet": "No prayer yet.",
   "output.scripture": "Scripture",
