--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,4 +1,3 @@
-
 {
   "_meta": { "lang": "es", "name": "Español" },
   "site.name": "JirehFaith",
@@ -52,6 +51,21 @@
   "lang.pt": "Portugués",
   "page.title": "Compositor de Oraciones con las Sagradas Escrituras",
   "input.emotion": "Emoción",
+  "emotion.anxiety": "Ansiedad",
+  "emotion.grief": "Duelo",
+  "emotion.fear": "Miedo",
+  "emotion.anger": "Ira",
+  "emotion.love": "Amor",
+  "emotion.perseverance": "Perseverancia",
+  "emotion.hope": "Esperanza",
+  "emotion.joy": "Gozo",
+  "emotion.financial_trials": "Pruebas financieras",
+  "emotion.relationship_trials": "Pruebas relacionales",
+  "emotion.illness": "Enfermedad",
+  "emotion.despair": "Desesperación",
+  "emotion.peace": "Paz",
+  "emotion.success": "Éxito",
+  "emotion.protection": "Protección",
   "output.prayer": "Oración",
   "output.noPrayerYet": "Aún no hay oración.",
   "output.scripture": "Escritura",
