--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -1,4 +1,3 @@
-
 {
   "_meta": { "lang": "fr", "name": "Français" },
   "site.name": "JirehFaith",
@@ -52,6 +51,21 @@
   "lang.pt": "Portugais",
   "page.title": "Compositeur de prières avec les Saintes Écritures",
   "input.emotion": "Émotion",
+  "emotion.anxiety": "Anxiété",
+  "emotion.grief": "Deuil",
+  "emotion.fear": "Peur",
+  "emotion.anger": "Colère",
+  "emotion.love": "Amour",
+  "emotion.perseverance": "Persévérance",
+  "emotion.hope": "Espérance",
+  "emotion.joy": "Joie",
+  "emotion.financial_trials": "Épreuves financières",
+  "emotion.relationship_trials": "Épreuves relationnelles",
+  "emotion.illness": "Maladie",
+  "emotion.despair": "Désespoir",
+  "emotion.peace": "Paix",
+  "emotion.success": "Réussite",
+  "emotion.protection": "Protection",
   "output.prayer": "Prière",
   "output.noPrayerYet": "Pas encore de prière.",
   "output.scripture": "Écriture",
