--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -1,4 +1,3 @@
-
 {
   "_meta": { "lang": "pt", "name": "Português" },
   "site.name": "JirehFaith",
@@ -52,6 +51,21 @@
   "lang.pt": "Português",
   "page.title": "Compositor de Orações com as Sagradas Escrituras",
   "input.emotion": "Emoção",
+  "emotion.anxiety": "Ansiedade",
+  "emotion.grief": "Luto",
+  "emotion.fear": "Medo",
+  "emotion.anger": "Ira",
+  "emotion.love": "Amor",
+  "emotion.perseverance": "Perseverança",
+  "emotion.hope": "Esperança",
+  "emotion.joy": "Alegria",
+  "emotion.financial_trials": "Provas financeiras",
+  "emotion.relationship_trials": "Provas relacionais",
+  "emotion.illness": "Doença",
+  "emotion.despair": "Desespero",
+  "emotion.peace": "Paz",
+  "emotion.success": "Sucesso",
+  "emotion.protection": "Proteção",
   "output.prayer": "Oração",
   "output.noPrayerYet": "Ainda não há oração.",
   "output.scripture": "Escritura",
