--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -67,6 +67,7 @@
   "emotion.success": "Sucesso",
   "emotion.protection": "Proteção",
   "output.prayer": "Oração",
+  "output.prayerFor": "Oração por {{emotion}}",
   "output.noPrayerYet": "Ainda não há oração.",
   "output.scripture": "Escritura",
   "a11y.compose": "Compor oração",
