--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -6,9 +6,9 @@
   "nav.donate": "Doar",
   "nav.techInfo": "Informações Técnicas",
   "hero.title": "JIREH FAITH",
-  "hero.tagline": "Quando a vida fala, deixe a Palavra de Deus responder.",
+  "hero.tagline": "Quando a vida fala, que a Palavra de Deus responda.",
   "composer.placeholder": "Descreva sua situação ou selecione uma circunstância…",
-  "composer.compose": "Compor Oração",
+  "composer.compose": "Compor uma Oração",
   "composer.clear": "Limpar",
   "composer.copy": "Copiar",
   "composer.copied": "Copiado!",
@@ -20,26 +20,26 @@
   "donate.applepay": "Doar com Apple Pay",
   "donate.googlepay": "Doar com Google Pay",
   "donate.comingSoon": "(em breve)",
-  "donate.note": "Se um botão estiver desabilitado, esse método ainda não está disponível.",
+  "donate.note": "Se um botão estiver desativado, esse meio ainda não está disponível.",
   "about.title": "Sobre o JirehFaith",
-  "about.p1": "No Jireh Faith acreditamos que quando a vida fala — em alegria, tristeza, medo ou gratidão — a resposta mais poderosa vem da Palavra de Deus.",
-  "about.p2": "Enraizado na promessa de Jeová Jireh — “O Senhor proverá” (Gênesis 22:14) — JirehFaith é um companheiro de oração projetado para trazer as Escrituras para suas circunstâncias diárias.",
+  "about.p1": "Na Jireh Faith, cremos que quando a vida fala — em alegria, tristeza, medo ou gratidão — a resposta mais poderosa vem da Palavra de Deus.",
+  "about.p2": "Ancorado na promessa de Jeová Jiré — “O Senhor proverá” (Gênesis 22:14) — JirehFaith é um companheiro de oração feito para trazer as Escrituras às suas circunstâncias diárias.",
   "about.mission.h": "Nossa Missão",
-  "about.mission.p": "Fornecer orações personalizadas baseadas nas Escrituras que tragam conforto, encorajamento e esperança — sempre apontando para a fidelidade de Deus.",
+  "about.mission.p": "Fornecer orações personalizadas baseadas nas Escrituras que tragam consolo, encorajamento e esperança — lembrando a fidelidade de Deus.",
   "about.how.h": "Como Funciona",
-  "about.how.1": "Compartilhe Sua Necessidade: Selecione ou descreva sua circunstância.",
-  "about.how.2": "As Escrituras Falam: JirehFaith encontra passagens bíblicas que refletem sua situação.",
+  "about.how.1": "Compartilhe sua necessidade: selecione ou descreva sua circunstância.",
+  "about.how.2": "A Escritura Fala: JirehFaith encontra passagens bíblicas que refletem sua situação.",
   "about.how.3": "A Oração é Formada: Uma oração sincera é gerada, enraizada na Palavra.",
-  "about.unique.h": "O Que Torna o JirehFaith Único",
-  "about.unique.1": "Escritura Primeiro — cada oração é baseada na Bíblia.",
-  "about.unique.2": "Emocionalmente Sintonizado — impulsionado pelo DHLL para sensibilidade humana.",
+  "about.unique.h": "O que Torna o JirehFaith Único",
+  "about.unique.1": "Escritura em Primeiro Lugar — cada oração é ancorada na Bíblia.",
+  "about.unique.2": "Atenção Emocional — impulsionado pelo DHLL para sensibilidade humana.",
   "about.unique.3": "Multilíngue — Inglês, Francês, Espanhol, Português.",
   "about.unique.4": "Acessível a Todos — orações diárias gratuitas; assinaturas e doações sustentam a missão.",
   "about.vision.h": "Nossa Visão",
   "about.vision.p": "Imaginamos um mundo onde nenhum crente ore sozinho.",
   "about.ministry.h": "Nosso Ministério",
-  "about.ministry.p": "Apoie nosso ministério através de doações ou assinaturas. Compartilhe as Escrituras!",
-  "about.blessing": "As bênçãos de Deus estejam sempre com você!",
+  "about.ministry.p": "Apoie nosso ministério por doações ou assinaturas. Compartilhe as Escrituras!",
+  "about.blessing": "Que as bênçãos de Deus estejam sempre sobre você!",
   "about.cta.tech": "Informações Técnicas",
   "about.cta.donate": "Doar",
   "tech.h": "Informações Técnicas",
@@ -49,18 +49,18 @@
   "lang.es": "Espanhol",
   "lang.fr": "Francês",
   "lang.pt": "Português",
-  "page.title": "Compositor de Orações com as Sagradas Escrituras",
+  "page.title": "Compositor de orações com as Sagradas Escrituras",
   "input.emotion": "Emoção",
   "emotion.anxiety": "Ansiedade",
   "emotion.grief": "Luto",
   "emotion.fear": "Medo",
-  "emotion.anger": "Ira",
+  "emotion.anger": "Raiva",
   "emotion.love": "Amor",
   "emotion.perseverance": "Perseverança",
   "emotion.hope": "Esperança",
   "emotion.joy": "Alegria",
-  "emotion.financial_trials": "Provas financeiras",
-  "emotion.relationship_trials": "Provas relacionais",
+  "emotion.financial_trials": "Provações financeiras",
+  "emotion.relationship_trials": "Provações relacionais",
   "emotion.illness": "Doença",
   "emotion.despair": "Desespero",
   "emotion.peace": "Paz",
@@ -70,7 +70,13 @@
   "output.prayerFor": "Oração por {{emotion}}",
   "output.noPrayerYet": "Ainda não há oração.",
   "output.scripture": "Escritura",
-  "a11y.compose": "Compor oração",
+  "a11y.compose": "Compor uma oração",
   "a11y.copy": "Copiar a oração completa",
-  "a11y.clear": "Limpar a saída da oração"
+  "a11y.clear": "Limpar o conteúdo da oração",
+  "acts.adoration": "Adoração",
+  "acts.confession": "Confissão",
+  "acts.thanksgiving": "Ação de Graças",
+  "acts.supplication": "Súplica",
+  "acts.yielding": "Render-se",
+  "acts.yielding_listening": "Render-se / Escutar"
 }
